--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,34 +1,44 @@
 name: home
-description: Microfrontend de la página principal del usuario.
-
-publish_to: 'none' # 🔧 No se publica, será orquestado por `chasis`.
+description: Microfrontend Home de la aplicación Flutter.
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.19.0 <3.0.0"
-  flutter: ">=3.29.0"
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  # 📌 🔄 Manejo de estado con BLoC
-  flutter_bloc: ^8.1.3  
+  webview_flutter: ^4.7.0
+  webview_flutter_web: ^0.2.2
+  webview_flutter_wkwebview: ^3.0.4
 
-  # 📌 🌍 Navegación con `go_router`
-  go_router: ^10.1.2  
+  provider: ^6.1.2 # Alineado con el chasis
 
-  # 📌 📡 Cliente HTTP para recibir datos de `chasis`
-  dio: ^5.3.2         
+  http: ^1.2.0
 
-  # 📌 🔐 Almacenamiento seguro del token de autenticación
-  flutter_secure_storage: ^8.0.0  
+  firebase_core: ^2.27.0
+  firebase_auth: ^4.17.0
+  cloud_firestore: ^4.15.0
+  firebase_storage: ^11.6.0
+
+  shared_preferences: ^2.2.2
+
+  go_router: ^13.2.0
+
+  flutter_secure_storage: ^9.2.2
+
+  flutter_animate: ^4.3.0
+
+  logger: ^2.0.2+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
