--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,27 +11,34 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # 🔹 Manejo de estado (Alineado con chasis y login)
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+
+  # 🔹 Navegación (Alineado con chasis)
+  go_router: ^10.2.0
+
+  # 🔹 Comunicación con API (Alineado con chasis y login)
+  http: ^1.2.0
+  dio: ^5.4.0
+
+  # 🔹 Almacenamiento seguro (Alineado con chasis y login)
+  shared_preferences: ^2.2.2
+  flutter_secure_storage: ^9.2.2
+
+  # 🔹 Firebase (Alineado con chasis y login)
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  cloud_firestore: ^4.15.0
+  firebase_storage: ^11.6.0
+
+  # 🔹 WebView (si es necesario, alineado con login)
   webview_flutter: ^4.7.0
   webview_flutter_web: ^0.2.2
   webview_flutter_wkwebview: ^3.0.4
 
-  provider: ^6.1.2 # Alineado con el chasis
-
-  http: ^1.2.0
-
-  firebase_core: ^2.27.0
-  firebase_auth: ^4.17.0
-  cloud_firestore: ^4.15.0
-  firebase_storage: ^11.6.0
-
-  shared_preferences: ^2.2.2
-
-  go_router: ^13.2.0
-
-  flutter_secure_storage: ^9.2.2
-
+  # 🔹 Animaciones y Logs (Alineado con chasis y login)
   flutter_animate: ^4.3.0
-
   logger: ^2.0.2+1
 
 dev_dependencies:
